# sportalytics

./: LICENSE  README.md  pyproject.toml
sportalytics/: app.py  components.py  layout.py  sportalytics.db  theme.py
sportalytics/ingestion/: base.py  cbb.py  cfb.py  mlb.py  nba.py  nfl.py  nhl.py  ufc.py
sportalytics/models/: db.py
sportalytics/pages/: calculators.py  free_pick.py  help.py  home.py  live_totals.py  marketplace.py  model_tracker.py  odds_insight.py  player_props.py  predictions.py  profile.py  settings.py
sportalytics/services/: cache.py  calculators.py  free_pick.py  live_totals.py  marketplace.py  model_tracker.py  odds_insight.py  player_props.py  predictions.py
tests/: test_app_pages.py  test_calculators.py  test_ingestion.py  test_services.py
